[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="InputEventAction" id=1]
action = "save_script"
pressed = true

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="Theme" id=3]

[sub_resource type="InputEventAction" id=4]
action = "run_script"
pressed = true

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 20.0

[node name="SaveButton" type="Button" parent="VBoxContainer/TopBar"]
margin_right = 53.0
margin_bottom = 20.0
shortcut = SubResource( 2 )
text = "Save *"

[node name="HSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/HSplitContainer"]
margin_right = 1024.0
margin_bottom = 422.0
size_flags_vertical = 3
theme = SubResource( 3 )
custom_constants/line_spacing = 5
text = "
foo = \"FOO\"
bar = \"BAR\"

print(\"Hello world\")

print(foo, bar)


func bruh(moment: str):
	print(\"Function execution yesssssss\")

bruh(\"Hello Arguments\")"
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
smooth_scrolling = true
minimap_draw = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HSplitContainer"]
margin_top = 434.0
margin_right = 1024.0
margin_bottom = 548.0

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/HSplitContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 107.0
rect_min_size = Vector2( 0, 100 )
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="RunButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 759.0
margin_bottom = 24.0
size_flags_horizontal = 3
shortcut = SubResource( 5 )
text = "Run code"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 763.0
margin_right = 861.0
margin_bottom = 24.0
text = "Clear console"

[node name="ClearOnRunCheckBox" type="CheckBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 865.0
margin_right = 1024.0
margin_bottom = 24.0
pressed = true
text = "Clear console on run"

[connection signal="pressed" from="VBoxContainer/TopBar/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="draw" from="VBoxContainer/HSplitContainer/TextEdit" to="." method="_on_TextEdit_draw"]
[connection signal="text_changed" from="VBoxContainer/HSplitContainer/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/RunButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
